# gen

./: .gitignore  AGENTS.md  README.md  agent_demo.py  chatbot.py  data_entity.py  deep_research.py  demo.py  groq_demo.py  jina_m0_rerank.py  llm_model.py  local_llm.py  main.py  model_tools.py  pyproject.toml  rag_query.py  readme.md  rerank_data.py  retrivevalDemo.py  spliter.py  stream_demo.py  tool_demo.py  tools.py
agent/: dspy_run.py  retriever_agent.py
api/: embeddings_api.py
chat_project/: language_parse.py
data/: rag.txt
docs/: INTERACTIVE_TEST_GUIDE.md  compatibility.md  extensions-migration.md  ui-rendering-optimization.md
docs/plans/: 2026-03-08-interactive-arch-simplification-design.md  2026-03-08-interactive-arch-simplification-plan.md  2026-03-08-interactive-paragraph-streaming-design.md  2026-03-08-interactive-paragraph-streaming.md  2026-03-08-interactive-ui-cleanup-design.md  2026-03-08-interactive-ui-cleanup-plan.md  2026-03-08-interactive-ui-rendering-design.md
embed/: embeddings_api.py  jinaai_demo.py  vllm_demo.py
flow/: context.py  flow.py  flow_test.py  main.py  state.py
notebook/: browser_demo.py  data_entity.py  deep_research.py  embeddings_api.py  helium_demo.py  jina_readerLM_v2.py  siglip2_demo.py  spliter.py  splitter.py  tool_demo.py
smol/: rag_agent.py
test/: embedding_zh_test.py  flow_test.py
tests/: conftest.py
tests/golden/: json_event_stream.golden
tests/integration/: test_agent_tool_loop.py  test_auto_compaction.py  test_cli_app.py  test_interactive_flow.py  test_interactive_pty.py  test_json_snapshot.py  test_live_core_flow.py  test_rpc_mode.py  test_slash_commands.py
tests/unit/: test_agent_session_registry.py  test_agent_session_streaming.py  test_agent_session_ui.py  test_agent_session_views.py  test_auth_store.py  test_interactive_app.py  test_interactive_completers.py  test_interactive_history.py  test_interactive_live_view.py  test_interactive_mode.py  test_interactive_prompt_session.py  test_interactive_reducers.py  test_model_registry.py  test_model_store.py  test_models_validate.py  test_prompt_and_skill.py  test_provider_adapters.py  test_resolve_config_value.py  (+7 more)
(+106 files in other folders)
