[project]
name = "gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.40",
    "datasets>=2.14.4",
    "dspy>=2.5.42",
    "helium>=5.1.1",
    "jieba>=0.42.1",
    "langchain-community>=0.3.14",
    "openai>=1.58.1",
    "playwright>=1.51.0",
    "qdrant-client>=1.12.2",
    "smolagents>=1.11.0",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-python>=0.23.6",
    "vllm>=0.1.2",
]
