[project]
name = "gen-agent"
version = "0.1.0"
description = "Python reimplementation of pi coding agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "gen" }
]
dependencies = [
  "typer>=0.16.0",
  "pydantic>=2.11.0",
  "textual>=0.85.0",
  "rich>=13.9.0",
  "openai>=1.107.0",
  "anthropic>=0.66.0",
  "httpx>=0.28.0",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.22.0"
]

[project.scripts]
gen = "gen_agent.cli.app:run"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "live: real online integration tests with external model providers",
]

[tool.ruff]
line-length = 100
target-version = "py311"
